[workspace]
resolver = "2"
members = [
  "utils"
  ,"core"
  ,"message-derive"
  ,"remote"
  ,"cluster"
]

[workspace.package]
name = "aether"
version = "0.1.0"
authors = ["mash180sx <mash180sx@gmail.com>"]
edition = "2021"
rust-version = "1.81.0"
description = "A high-performance actor system framework in Rust"
documentation = "https://docs.rs/aether"
readme = "README.md"
homepage = "https://github.com/org-408/aether"
repository = "https://github.com/org-408/aether"
license = "MIT"
keywords = ["actor", "concurrent", "distributed", "framework"]
categories = ["concurrency", "asynchronous", "network-programming"]

[workspace.dependencies]
async-trait = "0.1"
backtrace = "0.3"
base64-string-rs = "0.0.1" # TODO: change or remove
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.0"
futures = "0.3"
governor = "0.7"
humantime = "2.0"
im = "15.0"
num_enum = "0.7"
once_cell = "1.0"
oni-comb-uri-rs = "0.2" # TODO: change or remove
opentelemetry = { version = "0.25", features = ["metrics"] }
opentelemetry-otlp = { version = "0.25", features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry-stdout = { version = "0.25", features = ["metrics"] }
opentelemetry_sdk = { version = "0.25", features = ["metrics", "rt-tokio", "testing"] }
proc-macro2 = "1.0"
prost = "0.13"
prost-types = "0.13"
quote = "1.0"
rand = { version = "0.9.0-alpha.2", features = ["small_rng"] }
regex = "1.0"
rstest = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
siphasher = "1.0"
static_assertions = "1.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
syn = {version = "2.0", features = ["full", "extra-traits", "visit-mut", "visit"]}
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.0" , features = ["full"] }
tokio-condvar = "0.3"
tonic = "0.12"
tonic-types = "0.12"
tonic-build = "0.12"
tracing = "0.1"
tracing-futures = "0.2.5"
tracing-opentelemetry = { version = "0.27", features = ["metrics"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
