[package]
name = "aether-cluster"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Cluster library for Aether"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = [ "aether", "actor", "cluster", "grpc", "tonic" ]
categories.workspace = true

[dependencies]
aether-core = { version = "0.*", path = "../core" }
async-trait = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
num_enum = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tonic-types = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
tonic-build = { workspace = true }
