[package]
name = "aether-message-derive"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A Rust crate for Actors message"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = [ "actors", "actor-model", "async", "tokio" ]
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits", "visit-mut", "visit"]}
