[package]
name = "aether-remote"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Remote library for Aether"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = [ "aether", "actor", "remote", "grpc", "tonic" ]
categories.workspace = true

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
aether-core = { version = "0.*", path = "../core" }
aether-message-derive = { version = "0.*", path = "../message-derive" }
aether-utils = { version = "0.*", path = "../utils" }
num_enum = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json ={ workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
tonic-build = { workspace = true }
